--- a/dbt_test/.gitignore
+++ b/dbt_test/.gitignore
@@ -1,6 +1,11 @@
+# Ignore dbt target directory
+/target/
 
-./target/
-./dbt_packages/
-./logs/
+# Ignore dbt packages directory
+/dbt_packages/
 
-./.DS_Store
+# Ignore dbt logs directory
+/logs/
+
+# Ignore macOS .DS_Store files
+.DS_Store
