--- a/dbt_test/.gitignore
+++ b/dbt_test/.gitignore
@@ -1,11 +1,6 @@
-# Ignore dbt target directory
-/target/
 
-# Ignore dbt packages directory
-/dbt_packages/
+target/
+dbt_packages/
+logs/
 
-# Ignore dbt logs directory
-/logs/
-
-# Ignore macOS .DS_Store files
 .DS_Store
